<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">РАМК</string>
    <string name="info_activity_name">Информация</string>
    <string name="menu_info">Информация</string>
    <string name="logo">Logo</string>
    <string name="name">ФИО</string>
    <string name="contact_phone">Телефон для связи</string>
    <string name="support_phone_label">Телефон:</string>
    <string name="support_phone">8 800 250 72 62</string>
    <string name="program">ramc2</string>
    <string name="vin">VIN</string>
    <string name="license_plate">Госномер</string>
    <string name="card_number">Номер карты</string>
    <string name="current_position">Текущие координаты</string>
    <string name="identify">Определить</string>
    <string name="required_service">Требуется услуга</string>
    <string name="info_label">Информация:</string>
    <string name="info_text">К услугам клиентов РАМК круглосуточно и безлимитно в течение года:\n
        \n
		\t• Технические и юридические консультации по телефону\n
		\t• Техническая помощь на дороге\n
		\t• Запуск двигателя (подзарядка АКБ)\n
		\t• Замена поврежденных колес\n
		\t• Подвоз топлива\n
		\t• Вскрытие автомобиля\n
		\t• Эвакуация в случае поломки или ДТП\n
		\t• Аварийный комиссар\n
		\t• Очные юридические консультации\n
		\t• Медицинское страхование по России\n 
		\t• Европейское покрытие\n
		\t• Страхование на время поездок за рубеж\n
		\t• SIM-карта для звонков из-за рубежа\n
		\n
		Русский АвтоМотоКлуб – это европейские стандарты оказания услуг помощи на дорогах
		более чем в 400 городах России и 48 странах Европы,
		собственная служба эвакуации и техпомощи,
		развитая партнерская сеть,
		более 1 млн. автомобилей под покрытием!
		\n
    </string>
    <string name="info_button">Информация</string>
    <string name="case_send_fail_message">Не удалось отправить запрос, попробуйте самостоятельно позвонить в РАМК.</string>
    <string name="ramc_url">https://gps.ruamc.ru:40444/geo/case/</string>
    <string name="test_url">https://f-me.dyndns.org:40444/geo/case/</string>
</resources>