<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >
        
        <ImageView
            android:id="@+id/infoLogoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"
            android:src="@drawable/ramc_logo" />
        
        <LinearLayout
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
	        <TextView
	                android:id="@+id/supportPhoneLabelTextView"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/support_phone_label"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	        <TextView
	                android:id="@+id/supportPhoneTextView"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:paddingLeft="16dp"
	                android:text="@string/support_phone"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:autoLink="phone" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
	        <TextView
                android:id="@+id/infoLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />
	        <TextView
	            android:id="@+id/infoTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/info_text" />

	    </LinearLayout>
        
    </LinearLayout>

</ScrollView>
